--- a/index.html
+++ b/index.html
@@ -1,11 +1,124 @@
 <!DOCTYPE html>
-<html>
+<html lang="vi">
 <head>
   <meta charset="UTF-8">
-  <title>Trang cá nhân</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <title>Trang Cá Nhân</title>
+  <style>
+    * {
+      box-sizing: border-box;
+      margin: 0;
+      padding: 0;
+      font-family: 'Segoe UI', sans-serif;
+    }
+
+    body {
+      background-color: #f5f5f5;
+      color: #333;
+      padding: 20px;
+    }
+
+    .profile-container {
+      display: flex;
+      background-color: #fff;
+      border-radius: 10px;
+      overflow: hidden;
+      box-shadow: 0 4px 8px rgba(0,0,0,0.1);
+      max-width: 960px;
+      margin: auto;
+    }
+
+    .profile-left {
+      flex: 1;
+      background-color: #e6f0ff;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      padding: 20px;
+    }
+
+    .profile-left img {
+      width: 100%;
+      max-width: 200px;
+      border-radius: 50%;
+      border: 4px solid #fff;
+    }
+
+    .profile-right {
+      flex: 2;
+      padding: 30px;
+    }
+
+    .profile-right h1 {
+      font-size: 32px;
+      margin-bottom: 5px;
+    }
+
+    .profile-right h2 {
+      font-size: 18px;
+      color: #555;
+      margin-bottom: 20px;
+    }
+
+    .section {
+      margin-bottom: 20px;
+    }
+
+    .section h3 {
+      font-size: 20px;
+      margin-bottom: 10px;
+      color: #1a3c70;
+    }
+
+    .section ul {
+      list-style-type: disc;
+      margin-left: 20px;
+    }
+
+    @media (max-width: 768px) {
+      .profile-container {
+        flex-direction: column;
+      }
+
+      .profile-left, .profile-right {
+        padding: 20px;
+      }
+
+      .profile-left {
+        justify-content: center;
+      }
+    }
+  </style>
 </head>
 <body>
-  <h1>Xin chào! Tôi là Nguyễn Văn A</h1>
-  <p>Tôi là sinh viên ngành Kỹ sư phần mềm...</p>
+
+<div class="profile-container">
+  <div class="profile-left">
+    <img src="avatar.jpg" alt="Ảnh đại diện">
+  </div>
+  <div class="profile-right">
+    <h1>Nguyễn Văn A</h1>
+    <h2>Lập trình viên Frontend</h2>
+
+    <div class="section">
+      <h3>Kỹ năng</h3>
+      <ul>
+        <li>HTML, CSS, JavaScript</li>
+        <li>React.js, Vue.js</li>
+        <li>Git, Figma, REST API</li>
+      </ul>
+    </div>
+
+    <div class="section">
+      <h3>Dự án đã làm</h3>
+      <ul>
+        <li>Trang thương mại điện tử bằng React & Firebase</li>
+        <li>Ứng dụng quản lý công việc (To-do app) với Vue</li>
+        <li>Website giới thiệu công ty sử dụng HTML/CSS thuần</li>
+      </ul>
+    </div>
+  </div>
+</div>
+
 </body>
 </html>
