--- a/index.html
+++ b/index.html
@@ -94,17 +94,17 @@
 
 <div class="profile-container">
   <div class="profile-left">
-    <img src="avatar.jpg" alt="Ảnh đại diện">
+    <img src="img.jpg" alt="Ảnh đại diện">
   </div>
   <div class="profile-right">
-    <h1>Nguyễn Văn A</h1>
-    <h2>Lập trình viên Frontend</h2>
+    <h1>Đỗ Đức Đạt</h1>
+    <h2>Lập trình viên</h2>
 
     <div class="section">
       <h3>Kỹ năng</h3>
       <ul>
         <li>HTML, CSS, JavaScript</li>
-        <li>React.js, Vue.js</li>
+        <li>Python, C/C++, Nodejs</li>
         <li>Git, Figma, REST API</li>
       </ul>
     </div>
@@ -112,9 +112,7 @@
     <div class="section">
       <h3>Dự án đã làm</h3>
       <ul>
-        <li>Trang thương mại điện tử bằng React & Firebase</li>
-        <li>Ứng dụng quản lý công việc (To-do app) với Vue</li>
-        <li>Website giới thiệu công ty sử dụng HTML/CSS thuần</li>
+        <li>Nghiên cứu khoa học về mô hình sinh chú thích ảnh</li>
       </ul>
     </div>
   </div>
