--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>Trang Cá Nhân</title>
+  <title>Trang Cá Nhân - Đỗ Đức Đạt</title>
   <style>
     * {
       box-sizing: border-box;
@@ -39,8 +39,9 @@
 
     .profile-left img {
       width: 100%;
-      max-width: 200px;
-      border-radius: 50%;
+      max-width: 250px;
+      height: auto;
+      object-fit: cover;
       border: 4px solid #fff;
     }
 
@@ -83,10 +84,6 @@
       .profile-left, .profile-right {
         padding: 20px;
       }
-
-      .profile-left {
-        justify-content: center;
-      }
     }
   </style>
 </head>
@@ -104,7 +101,7 @@
       <h3>Kỹ năng</h3>
       <ul>
         <li>HTML, CSS, JavaScript</li>
-        <li>Python, C/C++, Nodejs</li>
+        <li>Python, C/C++, C#, Java, Kotlin, Nodejs</li>
         <li>Git, Figma, REST API</li>
       </ul>
     </div>
